Add header, services

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,10 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
   <script>WebFont.load({
     google: {
-      families: ["PT Sans:400,700"],
-      custom: {
-        families: ['Oswald']
-      }
+      families: ["Roboto:400,i400,700"],
     }
   });</script>
   <noscript><span class="noscript">У Вас отключён JavaScript...Пожалуйста включите в его в настройках</span>
@@ -37,6 +34,10 @@
     <!--HEADER-->
     @@include('../blocks/header.html')
     <!--HEADER END-->
+
+    <!--SERVICES-->
+    @@include('../blocks/services.html')
+    <!--SERVICES END-->
   </div>
   <!--FOOTER-->
   @@include('../blocks/footer.html')
