--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,5 +1,34 @@
-<header class="header" role="banner">
+<header class="header">
   <div class="container">
-
+    <div class="header__top">
+      <div class="header__logo">
+        <a href="index.html">Skokov</a>
+      </div>
+      <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__item  menu__item--active">
+            <a class="menu__link" href="#">Home</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Services</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">About us</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">News</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="header__bottom">
+      <h1 class="header__title">Global management consulting agency</h1>
+      <p class="header__text">Growth doesn't always go the way you expect. Our strategy consultants can help you climb.</p>
+      <a href="" class="btn">Get started</a>
+      <a href="" class="btn btn--gray">Learn more</a>
+    </div>
   </div>
 </header>
