Add news, strategic,footer

--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -114,6 +114,16 @@
           </div>
           <div class="team__item">
             <div class="team__image">
+              <img src="images/team__item-1.jpg" height="200" width="200" alt="Изображение человека">
+            </div>
+            <div class="team__hover">
+              <h4>Sofia Baxter</h4>
+              <p>Bad Debt Manager</p>
+              <span>Team Leader</span>
+            </div>
+          </div>
+          <div class="team__item">
+            <div class="team__image">
               <img src="images/team__item-3.jpg" height="200" width="200"
                    alt="Изображение человека">
             </div>
@@ -148,6 +158,17 @@
           <div class="team__item">
             <div class="team__image">
               <img src="images/team__item-6.jpg" height="200" width="200"
+                   alt="Изображение человека">
+            </div>
+            <div class="team__hover">
+              <h4>Maria Vickonti</h4>
+              <p>Bad Debt Manager</p>
+              <span>Team Leader</span>
+            </div>
+          </div>
+          <div class="team__item">
+            <div class="team__image">
+              <img src="images/team__item-4.jpg" height="200" width="200"
                    alt="Изображение человека">
             </div>
             <div class="team__hover">
