--- a/src/html/blocks/contact.html
+++ b/src/html/blocks/contact.html
@@ -1,6 +1,7 @@
 <section class="contact">
   <div class="container">
-    <h2 class="section__title  section__title--big">Contact us for a free, no obligation confidential exploration of your needs</h2>
+    <h2 class="section__title  section__title--big">Contact us for a free, no obligation confidential exploration of
+      your needs</h2>
     <a class="btn" href="">Contact Us</a>
   </div>
 </section>
