--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="header__top">
-      <div class="header__logo">
+      <div class="logo">
         <a href="index.html">Skokov</a>
       </div>
       <nav class="menu">
@@ -26,7 +26,8 @@
     </div>
     <div class="header__bottom">
       <h1 class="header__title">Global management consulting agency</h1>
-      <p class="header__text">Growth doesn't always go the way you expect. Our strategy consultants can help you climb.</p>
+      <p class="header__text">Growth doesn't always go the way you expect. Our strategy consultants can help you
+        climb.</p>
       <a href="" class="btn">Get started</a>
       <a href="" class="btn btn--gray">Learn more</a>
     </div>
