--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -25,11 +25,29 @@
   <!-- endbuild -->
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen, projection, print">
-  <!--[if lt IE 9]> <script src="//html5shiv.googlecode.com/ svn/trunk/html5.js"></script><![endif]-->
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/ svn/trunk/html5.js"></script><![endif]-->
   <script src="https://yastatic.net/browser-updater/v1/script.js" charset="utf-8"></script>
 </head>
 <body>
-<script>var yaBrowserUpdater = new ya.browserUpdater.init({"lang":"ru","browsers":{"yabrowser":"15.12","chrome":"54","ie":"10","opera":"41","safari":"8","fx":"49","iron":"35","flock":"Infinity","palemoon":"25","camino":"Infinity","maxthon":"4.5","seamonkey":"2.3"},"theme":"yellow"});</script>
+<script>var yaBrowserUpdater = new ya.browserUpdater.init({
+  "lang": "ru",
+  "browsers": {
+    "yabrowser": "15.12",
+    "chrome": "54",
+    "ie": "10",
+    "opera": "41",
+    "safari": "8",
+    "fx": "49",
+    "iron": "35",
+    "flock": "Infinity",
+    "palemoon": "25",
+    "camino": "Infinity",
+    "maxthon": "4.5",
+    "seamonkey": "2.3"
+  },
+  "theme": "yellow"
+});</script>
 <div class="wrapper">
   <div class="content">
     <!--HEADER-->
@@ -47,6 +65,14 @@
     <!--ABOUT-->
     @@include('../blocks/about.html')
     <!--ABOUT END-->
+
+    <!--STRATEGIC-->
+    @@include('../blocks/strategic.html')
+    <!--STRATEGIC END-->
+
+    <!--NEWS-->
+    @@include('../blocks/news.html')
+    <!--NEWS END-->
 
   </div>
   <!--FOOTER-->
