--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -29,7 +29,7 @@
           <input name="email" type="email" placeholder="Email">
           <input name="Subject" type="text" placeholder="Subject">
           <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
-          <a href="" class="btn  btn--footer">Send</a>
+          <button type="submit" class="btn  btn--footer">Send</button>
         </form>
       </div>
     </div>
